--- a/src/index.html
+++ b/src/index.html
@@ -20,17 +20,19 @@
   </head>
   <body>
     <main class="main">
-      <p class="title">ADVICE <span class="advice-number"># </span></p>
-      <h2 class="lead-quote">
-       
-      </h2>
+      <p class="title">ADVICE # <span class="advice-number">177</span></p>
+      <p class="lead-quote">
+        “It is easy to sit up and take notice, what's difficult is getting up and taking action.”
+      </p>
       <div class="pattern">
         <img src="./images/pattern-divider-desktop.svg" alt="" class="img-icon">
         
       </div>
-      <div class="icon-dice">
-        <img src="./images/icon-dice.svg" alt="">
-      </div>
+      <button class="icon-button">
+        <div class="icon-dice">
+          <img src="./images/icon-dice.svg" alt="" >
+        </div>
+      </button>
     </main>
 
     <script src="./main.js"></script>
