add style to mobile version

--- a/src/index.html
+++ b/src/index.html
@@ -20,17 +20,28 @@
   </head>
   <body>
     <main class="main">
-      <p class="title">ADVICE # <span class="advice-number">177</span></p>
-      <p class="lead-quote">
-        “It is easy to sit up and take notice, what's difficult is getting up and taking action.”
+      <p class="main__title">
+        ADVICE #<span class="main__advice-number">177</span>
       </p>
-      <div class="pattern">
-        <img src="./images/pattern-divider-desktop.svg" alt="" class="img-icon">
-        
+      <p class="main__lead-quote">
+        “It is easy to sit up and take notice, what's difficult is getting up
+        and taking action.”
+      </p>
+      <div class="main__pattern">
+        <img
+          src="./images/pattern-divider-desktop.svg"
+          alt="a divider pattern for main container"
+          class="img-icon-desktop"
+        />
+        <img
+          src="./images/pattern-divider-mobile.svg"
+          alt="a divider pattern for main container"
+          class="img-icon-moile"
+        />
       </div>
-      <button class="icon-button">
-        <div class="icon-dice">
-          <img src="./images/icon-dice.svg" alt="" >
+      <button class="main__icon-button">
+        <div class="main__icon-dice">
+          <img src="./images/icon-dice.svg" alt="Dice icon" />
         </div>
       </button>
     </main>
